--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>家庭教師ライト | 地域密着型の学生家庭教師</title>
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="家庭教師ライト | 地域密着型の学生家庭教師">
+    <meta name="twitter:description" content="慶応大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/fybe-inc/kateikyoushi-raito/main/images/story-image.webp">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="家庭教師ライト | 地域密着型の学生家庭教師">
+    <meta property="og:description" content="慶応大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
+    <meta property="og:image" content="https://raw.githubusercontent.com/fybe-inc/kateikyoushi-raito/main/images/story-image.webp">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
