--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="hero-content">
                 <h2>あなたのお子さまに<br>最適な学習環境を</h2>
                 <p>現役難関大学生による、地域密着型の家庭教師サービス</p>
+                <p class="target-area"><strong>対象：川崎市の小中学生</strong></p>
                 <a href="#contact" class="cta-button">無料体験授業を申し込む</a>
             </div>
             <div class="hero-image">
@@ -173,7 +174,7 @@
                         <h3>入会時にかかる費用、授業料などを教えてください。</h3>
                     </div>
                     <div class="faq-answer">
-                        <p>入会時にご負担いただく費用は、授業料、交通費のみです。入会金について、受付期間2025年5月30日まで無料とさせて頂きます。</p>
+                        <p>入会時にご負担いただく費用は、授業料、交通費のみです。入会金について、受付期間2025年5月30日まで無料とさせて頂きます。詳しい授業料金額については、お子さまの学年や科目数によって異なりますので、お問い合わせください。</p>
                     </div>
                 </div>
             </div>
@@ -186,8 +187,9 @@
             <div class="contact-methods">
                 <div class="contact-phone">
                     <h3>フリーダイヤル</h3>
-                    <p class="phone-number">0120-983-624</p>
+                    <p class="phone-number"><a href="tel:0120-983-624">0120-983-624</a></p>
                     <p>受付時間: 平日9:00〜21:00</p>
+                    <p class="price-info">授業料金額についてもお気軽にお問い合わせください</p>
                 </div>
                 <div class="contact-line">
                     <h3>LINE公式アカウント</h3>
@@ -216,7 +218,7 @@
                 </ul>
             </div>
             <div class="footer-contact">
-                <p>フリーダイヤル: 0120-983-624</p>
+                <p>フリーダイヤル: <a href="tel:0120-983-624">0120-983-624</a></p>
                 <p>LINE: <a href="https://lin.ee/wtTjGVm" target="_blank">https://lin.ee/wtTjGVm</a></p>
             </div>
             <div class="copyright">
