--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="家庭教師ライト | 地域密着型の学生家庭教師">
-    <meta name="twitter:description" content="慶応大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
+    <meta name="twitter:description" content="慶應義塾大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/fybe-inc/kateikyoushi-raito/main/images/story-image.webp">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="家庭教師ライト | 地域密着型の学生家庭教師">
-    <meta property="og:description" content="慶応大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
+    <meta property="og:description" content="慶應義塾大学をはじめとする難関大学に通う講師が所属。地域密着型の家庭教師サービス。">
     <meta property="og:image" content="https://raw.githubusercontent.com/fybe-inc/kateikyoushi-raito/main/images/story-image.webp">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -106,7 +106,7 @@
             <h2 class="section-title">立ち上げた経緯</h2>
             <div class="story-content">
                 <div class="story-text">
-                    <p>家庭教師ライトは、現役の大学生が立ち上げた学生団体です。慶応大学をはじめとする難関大学に通う講師が所属しています。所属講師は大手進学塾での指導経験が多数で、生徒を第一志望校合格へ導いた実績を持っています。</p>
+                    <p>家庭教師ライトは、現役の大学生が立ち上げた学生団体です。慶應義塾大学をはじめとする難関大学に通う講師が所属しています。所属講師は大手進学塾での指導経験が多数で、生徒を第一志望校合格へ導いた実績を持っています。</p>
                     <p>現役大学生として、お子さんに近い立場から指導を行います。この度、わたしたちが生まれ育った地域のために力を寄せ合って、教育業という形でエネルギーを還元したいと思い家庭教師事業を始めるに至りました。</p>
                     <p>普通の塾では融通が効かなかったり対応できなかったりすることを実現させるのがわたしたちの目標です。</p>
                 </div>
