--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="hero-content">
                 <h2>あなたのお子さまに<br>最適な学習環境を</h2>
                 <p>現役難関大学生による、地域密着型の家庭教師サービス</p>
-                <p class="target-area"><strong>対象：神奈川県の小中学生</strong></p>
+                <p class="target-area"><strong>対象：神奈川県・東京都の小中学生</strong></p>
                 <a href="#contact" class="cta-button">無料体験授業を申し込む</a>
             </div>
             <div class="hero-image">
