--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- BudouX - 日本語の自然な改行 -->
+    <script src="https://unpkg.com/budoux/bundle/budoux-ja.min.js"></script>
 </head>
 <body>
     <header>
@@ -41,9 +43,9 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2>あなたのお子さまに<br>最適な学習環境を</h2>
-                <p>現役難関大学生による、地域密着型の家庭教師サービス</p>
-                <p class="target-area"><strong>対象：神奈川県・東京都の小中学生</strong></p>
+                <h2><budoux-ja>あなたのお子さまに最適な学習環境を</budoux-ja></h2>
+                <p><budoux-ja>現役難関大学生による、地域密着型の家庭教師サービス</budoux-ja></p>
+                <p class="target-area"><strong><budoux-ja>対象：神奈川県・東京都の小中学生</budoux-ja></strong></p>
                 <a href="#contact" class="cta-button">無料体験授業を申し込む</a>
             </div>
             <div class="hero-image">
@@ -57,11 +59,11 @@
             <h2 class="section-title">キャンペーン実施中</h2>
             <div class="campaign-box">
                 <div class="campaign-content">
-                    <h3>期間限定特別オファー</h3>
-                    <p class="campaign-period">受付期間: 2025年5月31日までにご入会された方</p>
+                    <h3><budoux-ja>期間限定特別<span class="period-break"><br></span>オファー</budoux-ja></h3>
+                    <p class="campaign-period"><budoux-ja>受付期間: 2025年5月31日までにご入会された方</budoux-ja></p>
                     <div class="campaign-offer">
                         <p class="offer-item">入会金 <span>0</span>円</p>
-                        <p class="offer-item">授業料 <span>0</span>円<small>(初月60分4回まで)</small></p>
+                        <p class="offer-item">授業料 <span>0</span>円<small><budoux-ja>(初月60分4回まで)</budoux-ja></small></p>
                     </div>
                     <a href="#contact" class="cta-button">今すぐお問い合わせ</a>
                 </div>
@@ -80,22 +82,22 @@
                     <div class="strength-icon">
                         <img src="images/strength-1.webp" alt="地域密着型">
                     </div>
-                    <h3>1. 地域密着型</h3>
-                    <p>同じ環境を歩んできた講師がお子さんのケースを理解し、自身の経験を共有することができます。地域周辺の志望校に即した特別な対策を行うことも可能です。</p>
+                    <h3><budoux-ja>1. 地域密着型</budoux-ja></h3>
+                    <p><budoux-ja>同じ環境を歩んできた講師がお子さんのケースを理解し、自身の経験を共有することができます。地域周辺の志望校に即した特別な対策を行うことも可能です。</budoux-ja></p>
                 </div>
                 <div class="strength-item">
                     <div class="strength-icon">
                         <img src="images/strength-2.webp" alt="ご家庭ベースで柔軟なサービス">
                     </div>
-                    <h3>2. ご家庭ベースで柔軟なサービス</h3>
-                    <p>一般的な進学塾では、指導のスケジュールや手順を塾の方で決めるのが基本ですが、わたしたちはお子さんの学校生活やご家庭の事情に合わせたやり方で指導を行います。親御さんとの面談も随意行うことができるので、確認事項をすぐに話し合うことが可能です。</p>
+                    <h3><budoux-ja>2. ご家庭ベースで柔軟なサービス</budoux-ja></h3>
+                    <p><budoux-ja>一般的な進学塾では、指導のスケジュールや手順を塾の方で決めるのが基本ですが、わたしたちはお子さんの学校生活やご家庭の事情に合わせたやり方で指導を行います。親御さんとの面談も随意行うことができるので、確認事項をすぐに話し合うことが可能です。</budoux-ja></p>
                 </div>
                 <div class="strength-item">
                     <div class="strength-icon">
                         <img src="images/strength-3.webp" alt="個人に合わせた講師が指導">
                     </div>
-                    <h3>3. 個人に合わせた講師が指導</h3>
-                    <p>家庭教師ライトには、中学受験を経験した者や、国公立大学受験を経験した者、文系・理系科目それぞれに特化した者が講師として所属しており、指導科目やお子さんの特性に合わせた講師を選ぶことが可能です。成果への不満や受講科目の変更などに際して、自由に講師を変更することができます。</p>
+                    <h3><budoux-ja>3. 個人に合わせた講師が指導</budoux-ja></h3>
+                    <p><budoux-ja>家庭教師ライトには、中学受験を経験した者や、国公立大学受験を経験した者、文系・理系科目それぞれに特化した者が講師として所属しており、指導科目やお子さんの特性に合わせた講師を選ぶことが可能です。成果への不満や受講科目の変更などに際して、自由に講師を変更することができます。</budoux-ja></p>
                 </div>
             </div>
         </div>
@@ -106,9 +108,9 @@
             <h2 class="section-title">立ち上げた経緯</h2>
             <div class="story-content">
                 <div class="story-text">
-                    <p>家庭教師ライトは、現役の大学生が立ち上げた学生団体です。慶應義塾大学をはじめとする難関大学に通う講師が所属しています。所属講師は大手進学塾での指導経験が多数で、生徒を第一志望校合格へ導いた実績を持っています。</p>
-                    <p>現役大学生として、お子さんに近い立場から指導を行います。この度、わたしたちが生まれ育った地域のために力を寄せ合って、教育業という形でエネルギーを還元したいと思い家庭教師事業を始めるに至りました。</p>
-                    <p>普通の塾では融通が効かなかったり対応できなかったりすることを実現させるのがわたしたちの目標です。</p>
+                    <p><budoux-ja>家庭教師ライトは、現役の大学生が立ち上げた学生団体です。慶應義塾大学をはじめとする難関大学に通う講師が所属しています。所属講師は大手進学塾での指導経験が多数で、生徒を第一志望校合格へ導いた実績を持っています。</budoux-ja></p>
+                    <p><budoux-ja>現役大学生として、お子さんに近い立場から指導を行います。この度、わたしたちが生まれ育った地域のために力を寄せ合って、教育業という形でエネルギーを還元したいと思い家庭教師事業を始めるに至りました。</budoux-ja></p>
+                    <p><budoux-ja>普通の塾では融通が効かなかったり対応できなかったりすることを実現させるのがわたしたちの目標です。</budoux-ja></p>
                 </div>
                 <div class="story-image">
                     <img src="images/story-image.webp" alt="立ち上げた経緯">
@@ -123,58 +125,58 @@
             <div class="faq-container">
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>先生との相性が合わなかった場合、交代できますか？</h3>
+                        <h3><budoux-ja>先生との相性が合わなかった場合、交代できますか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>はい、ライトでは何度でも先生を変更することが可能です。</p>
+                        <p><budoux-ja>はい、ライトでは何度でも先生を変更することが可能です。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>部活や習い事が忙しくても大丈夫ですか？</h3>
+                        <h3><budoux-ja>部活や習い事が忙しくても大丈夫ですか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>授業の日程は教師と相談の上、自由に決めることができます。お子様が忙しい場合でも受講することができます。</p>
+                        <p><budoux-ja>授業の日程は教師と相談の上、自由に決めることができます。お子様が忙しい場合でも受講することができます。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>無料体験は入会しなくても無料で受けられますか？</h3>
+                        <h3><budoux-ja>無料体験は入会しなくても無料で受けられますか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>はい、入会しなくても受けられます。無料体験の段階でご要望をお伺いし、具体的な学習計画と料金プランをご提案いたします。また、無料の学習相談も承っておりますので、お気軽にご相談ください。</p>
+                        <p><budoux-ja>はい、入会しなくても受けられます。無料体験の段階でご要望をお伺いし、具体的な学習計画と料金プランをご提案いたします。また、無料の学習相談も承っておりますので、お気軽にご相談ください。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>複数科目の受講は可能ですか？</h3>
+                        <h3><budoux-ja>複数科目の受講は可能ですか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>はい、可能です。5教科全て受講できます。例えば、普段は苦手な1科目のみ授業を行い、テスト前に全科目の授業を実施するなど、様々な組み合わせで5教科全て対策することができます。</p>
+                        <p><budoux-ja>はい、可能です。5教科全て受講できます。例えば、普段は苦手な1科目のみ授業を行い、テスト前に全科目の授業を実施するなど、様々な組み合わせで5教科全て対策することができます。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>体調不良や急な予定などで授業の振替はできますか？</h3>
+                        <h3><budoux-ja>体調不良や急な予定などで授業の振替はできますか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>はい、可能です。当日でも授業開始前までにご連絡を頂ければ無料で別日に振替することができます。</p>
+                        <p><budoux-ja>はい、可能です。当日でも授業開始前までにご連絡を頂ければ無料で別日に振替することができます。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>教材費はかかりますか？</h3>
+                        <h3><budoux-ja>教材費はかかりますか？</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>教材費はかかりません。指定教材はなく、お手持ちの教材で学習を進めさせて頂きます。</p>
+                        <p><budoux-ja>教材費はかかりません。指定教材はなく、お手持ちの教材で学習を進めさせて頂きます。</budoux-ja></p>
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>入会時にかかる費用、授業料などを教えてください。</h3>
+                        <h3><budoux-ja>入会時にかかる費用、授業料などを教えてください。</budoux-ja></h3>
                     </div>
                     <div class="faq-answer">
-                        <p>入会時にご負担いただく費用は、授業料、交通費のみです。入会金について、受付期間2025年5月30日まで無料とさせて頂きます。詳しい授業料金額については、お子さまの学年や科目数によって異なりますので、お問い合わせください。</p>
+                        <p><budoux-ja>入会時にご負担いただく費用は、授業料、交通費のみです。入会金について、受付期間2025年5月30日まで無料とさせて頂きます。詳しい授業料金額については、お子さまの学年や科目数によって異なりますので、お問い合わせください。</budoux-ja></p>
                     </div>
                 </div>
             </div>
@@ -186,18 +188,18 @@
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-methods">
                 <div class="contact-phone">
-                    <h3>フリーダイヤル</h3>
+                    <h3><budoux-ja>フリーダイヤル</budoux-ja></h3>
                     <p class="phone-number"><a href="tel:0120-983-624">0120-983-624</a></p>
-                    <p>受付時間: 平日9:00〜21:00</p>
-                    <p class="price-info">授業料金額についてもお気軽にお問い合わせください</p>
+                    <p><budoux-ja>受付時間: 平日9:00〜21:00</budoux-ja></p>
+                    <p class="price-info"><budoux-ja>授業料金額についてもお気軽にお問い合わせください</budoux-ja></p>
                 </div>
                 <div class="contact-line">
-                    <h3>LINE公式アカウント</h3>
+                    <h3><budoux-ja>LINE公式アカウント</budoux-ja></h3>
                     <div class="line-qr">
                         <img src="images/line-qr.jpg" alt="LINE QRコード">
                     </div>
-                    <p>LINEからもお気軽にお問い合わせください</p>
-                    <a href="https://lin.ee/wtTjGVm" class="line-button" target="_blank">友だち追加</a>
+                    <p><budoux-ja>LINEからもお気軽にお問い合わせください</budoux-ja></p>
+                    <a href="https://lin.ee/wtTjGVm" class="line-button" target="_blank"><budoux-ja>友だち追加</budoux-ja></a>
                 </div>
             </div>
         </div>
