--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <h3><budoux-ja>期間限定特別<span class="period-break"><br></span>オファー</budoux-ja></h3>
                     <p class="campaign-period"><budoux-ja>受付期間: 2025年5月31日までにご入会された方</budoux-ja></p>
                     <div class="campaign-offer">
-                        <p class="offer-item">入会金 <span>0</span>円</p>
-                        <p class="offer-item">授業料 <span>0</span>円<small><budoux-ja>(初月60分4回まで)</budoux-ja></small></p>
+                        <p class="offer-item"><budoux-ja>入会金<span>0</span>円</budoux-ja></p>
+                        <p class="offer-item"><budoux-ja>授業料<span>0</span>円<small></budoux-ja><budoux-ja style="white-space: nowrap">(初月60分4回まで)</budoux-ja></small></p>
                     </div>
                     <a href="#contact" class="cta-button">今すぐお問い合わせ</a>
                 </div>
